fix: change caps and shift

--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
     justify-content: center;
     background-color: rgb(222, 222, 248);
     padding-top: 30px;
-    gap: 80px;
     
 }
 
@@ -18,7 +17,8 @@
     width: 50%;
     height: 300px;
     background-color: #fff;
-    border: 10px solid rgb(120, 137, 230);
+    
+    margin-bottom: 100px;
     
 }
 
@@ -39,12 +39,14 @@
 
 .block-key-board {
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
-    width: 735px;
+    width: 750px;
     height: 250px;
     padding: 5px;
     border: 1px solid #fff;
     gap: 5px;
+    margin-bottom: 50px;
 }
 
 
@@ -93,4 +95,15 @@
 .key-board__key--active {
     background-color:rgb(234, 237, 248);
     transition: all 0.2s linear;
+}
+
+.rules {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+.rules_img-win {
+    margin-top: -5px;
+    width: 60px;
+    height: auto;
 }
